--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,25 @@
-baseURL = "http://example.org/"
-languageCode = "en-us"
-title = "My New Hugo Site"
+baseURL = "/"
+title = "digitalsoba"
+theme = "m10c"
+paginate = 5
+
+[menu]
+  [[menu.main]]
+    identifier = "home"
+    name = "Home"
+    url = "/"
+  [[menu.main]]
+    identifier = "tags"
+    name = "Tags"
+    url = "/tags/"
+
+[params]
+  author = "digitalsoba"
+  description = "⚡ DevOps Engineer - Corgi Dad"
+  menu_item_separator = " - "
+  [[params.social]]
+    name = "github"
+    url = "https://github.com/digitalsoba"
+  [[params.social]]
+    name = "twitter"
+    url = "https://twitter.com/digitalsoba"
