--- a/k8s/base/deployment.yml
+++ b/k8s/base/deployment.yml
@@ -27,5 +27,5 @@ spec:
             - containerPort: 80
           resources:
             limits:
-              memory: "512Mi"
-              cpu: "1"
+              memory: "256M"
+              cpu: "100m"
