--- a/k8s/base/service.yml
+++ b/k8s/base/service.yml
@@ -5,10 +5,10 @@ metadata:
     app: blog
   name: blog
 spec:
+  type: NodePort
   ports:
   - port: 80
-    protocol: TCP
     targetPort: 80
+    protocol: TCP
   selector:
     app: blog
-  type: LoadBalancer
