--- a/k8s/overlays/prod/ingress.yml
+++ b/k8s/overlays/prod/ingress.yml
@@ -3,16 +3,22 @@ kind: Ingress
 metadata:
   name: blog-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    kubernetes.io/ingress.class: "nginx"
+    kubernetes.io/tls-acme: "true"
+    cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
+  tls:
+  - hosts: 
+    - digitalsoba.com
+    secretName: letsencrypt-prod
   rules:
-    - host: digitalsoba.com
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: blog
-                port:
-                  number: 80
+  - host: digitalsoba.com
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: blog
+            port:
+              number: 80
