--- a/k8s/overlays/prod/ingress.yml
+++ b/k8s/overlays/prod/ingress.yml
@@ -4,14 +4,14 @@ metadata:
   name: blog-ingress
   annotations:
     kubernetes.io/ingress.class: nginx
-    cert-manager.io/issuer: letsencrypt-prod
+    cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
   tls:
   - hosts:
-    - digitalsoba.dev
-    secretName: digitalsoba-dev-tls
+    - digitalsoba.com
+    secretName: digitalsoba-com-tls
   rules:
-  - host: digitalsoba.dev
+  - host: digitalsoba.com
     http:
       paths:
       - backend:
