--- a/k8s/base/ingress.yml
+++ b/k8s/base/ingress.yml
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: blog-ingress
@@ -8,6 +8,10 @@ spec:
     - host: localhost
       http:
         paths:
-        - backend:
-            serviceName: blog
-            servicePort: 80
+        - paths: /blog
+          pathType: Prefix
+          backend:
+            service:
+              name: blog
+              port: 
+                number: 80
