--- a/k8s/base/kustomization.yml
+++ b/k8s/base/kustomization.yml
@@ -1,4 +1,10 @@
----
+
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
+commonLabels:
+  app: blog
+
 resources:
 - deployment.yml
 - ingress.yml
