--- a/k8s/overlays/prod/ingress.yml
+++ b/k8s/overlays/prod/ingress.yml
@@ -1,4 +1,4 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: blog-ingress
@@ -14,6 +14,10 @@ spec:
   - host: digitalsoba.com
     http:
       paths:
-      - backend:
-          serviceName: blog
-          servicePort: 80
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: blog
+            port: 
+              number: 80
