--- a/k8s/overlays/prod/kustomization.yml
+++ b/k8s/overlays/prod/kustomization.yml
@@ -1,7 +1,13 @@
----
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
 bases:
 - ../../base
+
+replicas:
+- name: blog
+  count: 2
+
 patchesStrategicMerge:
-- deployment.yml
 - ingress.yml
 - service.yml
