--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,22 +1,26 @@
-name: ci
+name: Build and Deploy
 
 on:
   pull_request:
     branches: main
 jobs:
-  main:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository and submodules
         uses: actions/checkout@v2
         with:
           submodules: recursive
-      - name: Build docker image
-        id: docker_build
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1 
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.CR_PAT }} 
+      - name: Build and push image
         uses: docker/build-push-action@v2
         with:
-          push: false
-          tags: digitalsoba/digitalsoba.com:latest
+          tags: digitalsoba/digitalsoba.com:$GITHUB_SHA
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
 
