--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Get sha
+        id: get-sha
+        run: echo "::set-output name=sha_short::$(git rev-parse --short=9 HEAD)"  
       - name: Checkout repository and submodules
         uses: actions/checkout@v2
         with:
@@ -20,7 +23,7 @@ jobs:
       - name: Build and push image
         uses: docker/build-push-action@v2
         with:
-          tags: digitalsoba/digitalsoba.com:${GITHUB_SHA::9}
+          tags: digitalsoba/digitalsoba.com:${{ steps.get-required-vars.outputs.sha_short }}
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
 
