--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Build and push image
         uses: docker/build-push-action@v2
         with:
-          tags: digitalsoba/digitalsoba.com:${{ steps.get-required-vars.outputs.sha_short }}
+          tags: ${{ steps.get-required-vars.outputs.sha_short }}
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
 
