--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,10 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.CR_PAT }} 
       - name: Build and push image
+        id: docker_build
         uses: docker/build-push-action@v2
         with:
-          tags: ${{ steps.get-required-vars.outputs.sha_short }}
+          tags: digitalsoba/digitalsoba.com:${{ steps.get-sha.outputs.sha_short }}
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
 
