--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,22 +1,49 @@
-name: ci
+name: Build and Deploy
 
 on:
   pull_request:
     branches: main
 jobs:
-  main:
+  build:
     runs-on: ubuntu-latest
     steps:
+      - name: Docker Meta
+        id: docker_meta
+        uses: crazy-max/ghaction-docker-meta@v1
+        with: 
+          images: |
+            ghcr.io/digitalsoba/digitalsoba.com
+          tag-sha: true 
       - name: Checkout repository and submodules
         uses: actions/checkout@v2
         with:
           submodules: recursive
-      - name: Build docker image
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1 
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.CR_PAT }} 
+      - name: Build and push image
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          push: false
-          tags: digitalsoba/digitalsoba.com:latest
+          context: .
+          push: true
+          tags: ${{ steps.docker_meta.outputs.tags }}
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
-
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - name: Install dependencies
+        run: |
+          sudo curl -o /usr/local/bin/scw -L "https://github.com/scaleway/scaleway-cli/releases/download/v2.2.4/scw-2.2.4-linux-x86_64"
+          sudo chmod +x /usr/local/bin/scw
+          curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+          sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+          curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh" | bash
+          kubectl version --client
+          kustomize version
+          scw version
