CI/CD into Staging environment 🚀 (#6)
* Update manifest

* Modify kustomize template

* Update action to build and push image

* Fix GH_SHA

* Fix SHA with step

* Fix SHA with step again

* typo on id

* Use docker meta for tags

* Use docker meta for tags - another fix

* Add dependencies for deployment

* add workflow dep

* Modify kustomize image

* Init SCW

* test kubectl

* test kustomze build

* repeat steps in new workflow

* Add staging deployment

* use staging

* try with GA context

* try with env sha

* try with step output

* move step

* add image

* Deploy to STG

* 🚀

--- a/k8s/overlays/staging/kustomization.yml
+++ b/k8s/overlays/staging/kustomization.yml
@@ -3,17 +3,13 @@ kind: Kustomization
 
 commonLabels:
   app: blog
-  environment: production
+  environment: staging
 
-namespace: production
+namespace: staging
 
 images:
 - name: ghcr.io/digitalsoba/digitalsoba.com
-  newTag: latest
-
-replicas:
-- count: 2
-  name: blog
+  newTag: sha-c07e9ce
 
 patchesStrategicMerge:
 - ingress.yml
