--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,17 +7,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Docker Meta
-        id: docker_meta
-        uses: crazy-max/ghaction-docker-meta@v1
-        with: 
-          images: |
-            ghcr.io/digitalsoba/digitalsoba.com
-          tag-sha: true 
       - name: Checkout repository and submodules
         uses: actions/checkout@v2
         with:
           submodules: recursive
+      - name: Get commit SHA
+        id: get_sha
+        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1 
         with:
@@ -30,13 +26,20 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.docker_meta.outputs.tags }}
+          tags: ghcr.io/digitalsoba/digitalsoba.com:${{ steps.get_sha.outputs.sha_short }}
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
   deploy:
     runs-on: ubuntu-latest
     needs: [build]
     steps:
+      - name: Checkout repository and submodules
+        uses: actions/checkout@v2
+        with:
+          submodules: recursive
+      - name: Get commit SHA
+        id: get_sha
+        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
       - name: Install dependencies
         run: |
           sudo curl -o /usr/local/bin/scw -L "https://github.com/scaleway/scaleway-cli/releases/download/v2.2.4/scw-2.2.4-linux-x86_64"
@@ -47,3 +50,18 @@ jobs:
           kubectl version --client
           kustomize version
           scw version
+      - name: Init SCW
+        run: |
+          scw init secret-key=${{ secrets.SCW_SECRET_KEY }} send-telemetry=false install-autocomplete=false with-ssh-key=false region=fr-par zone=fr-par-1
+      - name: Install kubeconfig 
+        run: |
+          scw k8s kubeconfig install ${{ secrets.SCW_CLUSTER_ID }}
+      - name: Deploy new image to staging namespace
+        run: |
+          cd k8s/overlays/staging
+          kustomize edit set image ghcr.io/digitalsoba/digitalsoba.com:${{ steps.get_sha.outputs.sha_short }}
+          kustomize build | kubectl apply -f-
+      - name: Cleanup
+        run: | 
+          rm -rf /home/runner/.kube/config
+          rm -rf /home/runner/.config/scw
