--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,8 +1,9 @@
-name: Build and deploy to staging
+name: Build and deploy to production
 
 on:
-  pull_request:
-    branches: main
+  push:
+    branches: 
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -29,17 +30,6 @@ jobs:
           tags: ghcr.io/digitalsoba/digitalsoba.com:${{ steps.get_sha.outputs.sha_short }}
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
-  deploy:
-    runs-on: ubuntu-latest
-    needs: [build]
-    steps:
-      - name: Checkout repository and submodules
-        uses: actions/checkout@v2
-        with:
-          submodules: recursive
-      - name: Get commit SHA
-        id: get_sha
-        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
       - name: Install dependencies
         run: |
           sudo curl -o /usr/local/bin/scw -L "https://github.com/scaleway/scaleway-cli/releases/download/v2.2.4/scw-2.2.4-linux-x86_64"
@@ -58,7 +48,7 @@ jobs:
           scw k8s kubeconfig install ${{ secrets.SCW_CLUSTER_ID }}
       - name: Deploy new image to staging namespace
         run: |
-          cd k8s/overlays/staging
+          cd k8s/overlays/prod
           kustomize edit set image ghcr.io/digitalsoba/digitalsoba.com:${{ steps.get_sha.outputs.sha_short }}
           kustomize build | kubectl apply -f-
       - name: Cleanup
